k8s/6.go-web/patch.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dep
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: go-web
          volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: go-web-pvc
