k8s/6.go-web/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: ing
spec:
  backend:
    serviceName: svc
    servicePort: 8000
